# kgrypto

./: .gitignore  README.md  all_tickers.pkl  pyproject.toml  test.ipynb
src/: backtester.py  constants.py  custom_types.py  main.py  plotting.py  retriever.py  strategy.py
src/types/: backtester.py  retriever.py  strategy.py
